# sigil

./: Cargo.toml  trim-spritesheet
assets/levels/: test.ldtk  world.ldtk
assets/sprites/: default_tiles.aseprite  items.aseprite  player.aseprite
scripts/: trim-spritesheet
src/: game.rs  main.rs  util.rs
src/game/: camera.rs  components.rs  debug.rs  default_plugin_setup.rs  entity_instance.rs  kinematic_actor.rs  ldtk.rs  player.rs  tile.rs
src/game/entity_instance/: pickup.rs  player.rs
src/game/kinematic_actor/: input.rs  platformer.rs
src/util/: input.rs  math.rs  vector2.rs  vector2_i32.rs
