[package]
name = "sigil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy-inspector-egui = "0.17.0"
bevy_ecs_ldtk = { version = "0.5.0", features = ["derive", "atlas"] }
bevy_prototype_debug_lines = "0.9.0"
bevy_rapier2d = "0.20.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
